--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 <title>Consignment Store Encore Round Robin Los Altos,CA</title>
 <meta name="keywords" content="jewelry store consignment clothes used clothes shop Round Robin Encore"/>
-<meta name="description" content="Visit us at 197 First Street,Los Altos, CA 94022 to find fine jewelry, brand clothes and more...at Round Robin Consignment Shop"/>
+<meta name="description" content="Visit us at 146 Main Street, Suite 100A, Los Altos, CA 94022 to find fine jewelry, brand clothes and more...at Encore Round Robin"/>
 <link href="style.css" rel="stylesheet" type="text/css"/>
 <script type="application/ld+json">
   {
