--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <title>Consignment Store Encore Round Robin Los Altos,CA</title>
 <meta name="keywords" content="jewelry store consignment clothes used clothes shop Round Robin Encore"/>
 <meta name="description" content="Visit us at 146 Main Street, Suite 100A, Los Altos, CA 94022 to find fine jewelry, brand clothes and more...at Encore Round Robin"/>
+<link rel="icon" href="images/icon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="images/icon.png" type="image/png">
 <link href="style.css" rel="stylesheet" type="text/css"/>
 <script type="application/ld+json">
   {
