--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <?xml version="1.0" encoding="UTF-8" ?>
- 
- <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9" xmlns:mobile="http://www.google.com/schemas/sitemap-mobile/1.0">
-    
-</urlset>
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -12,6 +8,7 @@
 <title>Contact Round Robin Store</title>
 <meta name="keywords" content=""/>
 <meta name="description" content=""/>
+<link rel="preload" href="images/flower_background.jpg" as="image">
 <link href="style.css" rel="stylesheet" type="text/css"/>
 <style type="text/css">
 <!--
