--- a/gallery.html
+++ b/gallery.html
@@ -1,9 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <?xml version="1.0" encoding="UTF-8" ?>
- 
- <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9" xmlns:mobile="http://www.google.com/schemas/sitemap-mobile/1.0">
-    
-</urlset>
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -21,6 +17,7 @@
 <title>Gallery Round Robin Store</title>
 <meta name="keywords" content="product gallery clothes for sale jewelry for sale"/>
 <meta name="description" content="Clothes and jewelry for sale at Round Robin Store "/>
+<link rel="preload" href="images/flower_background.jpg" as="image">
 <link href="style.css" rel="stylesheet" type="text/css"/></head>
 <body>
 <!-- start header -->
