--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Visit us at 146 Main Street, Suite 100A, Los Altos, CA 94022 to find fine jewelry, brand clothes and more...at Encore Round Robin"/>
   <link rel="icon" href="images/icon.ico" type="image/x-icon">
   <link rel="shortcut icon" href="images/icon.png" type="image/png">
+  <link rel="preload" href="images/flower_background.jpg" as="image">
   <link href="style.css" rel="stylesheet" type="text/css"/>
   <script type="application/ld+json">
     {
