--- a/consignment.html
+++ b/consignment.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <?xml version="1.0" encoding="UTF-8" ?>
 
- <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9" xmlns:mobile="http://www.google.com/schemas/sitemap-mobile/1.0">
-    
-</urlset>
-
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 
@@ -12,6 +8,7 @@
 <title>Consignment Clothes and Jewelry</title>
 <meta name="keywords" content="clothes jewelry consignment used clothes trade clothes trade jewelry"/>
 <meta name="description" content="Red Robin Store partners with many designers and wholesale providers. To talk about possible partnership, please contact +1 (650) 948-0955"/>
+<link rel="preload" href="images/flower_background.jpg" as="image">
 <link href="style.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
