--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
 <head>
-  <title>Consignment Store Encore Round Robin Los Altos,CA</title>
+  <title>Encore Round Robin Los Altos,CA</title>
   <meta name="keywords" content="jewelry store consignment clothes used clothes shop Round Robin Encore"/>
   <meta name="description" content="Visit us at 146 Main Street, Suite 100A, Los Altos, CA 94022 to find fine jewelry, brand clothes and more...at Encore Round Robin"/>
   <link rel="icon" href="images/icon.ico" type="image/x-icon">
