--- a/consignment.html
+++ b/consignment.html
@@ -52,7 +52,7 @@
 <!-- end page -->
 <!-- start footer -->
 <div id="footer">
-	<p id="legal">Address: 146 Main St., Los Altos, CA 94022  |  www.roundrobinstore.com © 2024</p>
+	<p id="legal">Address: 146 Main St., Suite 100A, Los Altos, CA 94022  |  www.roundrobinstore.com © 2024</p>
 </div>
 <!-- end footer -->
 </body>
