--- a/contact.html
+++ b/contact.html
@@ -48,8 +48,8 @@
 				  Los Altos, CA 94022<br/>
 				  <span class="style1">Phone (650) 948-0955</span><br/>
 			  Open Tues - Sat 11am - 5pm<br/>
-              <a href="mailto:christyd@roundrobinstore.com">
-<font color="#FF0000">christyd@roundrobinstore.com</font></a>
+              <a href="mailto:encore.rrobin@yahoo.com">
+<font color="#FF0000">encore.rrobin@yahoo.com</font></a>
  <br/>
 				</div>
               <p>Directions: Google Maps</p>
