More email updates

--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@ We currently offer pearl and bead restringing with or without knots, and jewelry
                  <strong> 50% Sale please join mailing list!</strong> <br/>
 We have regular storewide 50% off sales.<br/>
 Please email me with your email address at:<br/>
-<strong><a href="mailto:christyd@roundrobinstore.com">
-<font color="#FF0000">christyd@roundrobinstore.com</font></a></strong><br/>
+<strong><a href="mailto:encore.rrobin@yahoo.com">
+<font color="#FF0000">encore.rrobin@yahoo.com</font></a></strong><br/>
 </div> 
 </div>
 		  </div>
