--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ Please email me with your email address at:<br/>
   <div style="clear: both;">&nbsp;</div>
 </div>
 <div id="footer">
-  <p id="legal">Address: 146 Main St., Suite 100A, Los Altos, CA 94022  |  www.roundrobinstore.com  2024</p>
+  <p id="legal">https://www.ebay.com/str/encorelosaltos  |  www.roundrobinstore.com © 2025</p>
 </div>
 <!-- end page -->
 <!-- start footer -->
