--- a/gallery.html
+++ b/gallery.html
@@ -70,7 +70,7 @@
 <!-- end page -->
 <!-- start footer -->
 <div id="footer">
-	<p id="legal">Address: 146 Main St., Suite 100A, Los Altos, CA 94022  |  www.roundrobinstore.com © 2024</p>
+	<p id="legal">https://www.ebay.com/str/encorelosaltos  |  www.roundrobinstore.com © 2025</p>
 </div>
 <!-- end footer -->
 </body>
