--- a/gallery.html
+++ b/gallery.html
@@ -70,7 +70,7 @@
 <!-- end page -->
 <!-- start footer -->
 <div id="footer">
-	<p id="legal">www.ebay.com/str/encorelosaltos  |  www.roundrobinstore.com © 2025</p>
+	<p id="legal">stores.ebay.com/encorelosaltos  |  www.roundrobinstore.com © 2025</p>
 </div>
 <!-- end footer -->
 </body>
