--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ Please email me with your email address at:<br/>
   <div style="clear: both;">&nbsp;</div>
 </div>
 <div id="footer">
-  <p id="legal">www.ebay.com/str/encorelosaltos  |  www.roundrobinstore.com © 2025</p>
+  <p id="legal">stores.ebay.com/encorelosaltos  |  www.roundrobinstore.com © 2025</p>
 </div>
 <!-- end page -->
 <!-- start footer -->
